.k8/gateway-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api
spec:
  selector:
    matchLabels:
      app: gateway
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        version: v1
    spec:
      containers:
        - name: gateway-container
          image: iamrobert/sc-api-gateway:v0.0.1-alpha
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-api
  labels:
    app: gateway
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: gateway
