.k8/identity-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
spec:
  selector:
    matchLabels:
      app: identity
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: identity
        version: v1
    spec:
      containers:
        - name: identity-container
          image: iamrobert/sc-api-identity:v0.0.1-alpha
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api
  labels:
    app: identity
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: identity
