.k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
spec:
  tls:
    - hosts:
        - api.snowcapture.com
      secretName: mkcert
  rules:
    - host: api.snowcapture.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-api
                port:
                  number: 80
          - path: /comms
            pathType: Prefix
            backend:
              service:
                name: comms-api
                port:
                  number: 80
          - path: /content
            pathType: Prefix
            backend:
              service:
                name: content-api
                port:
                  number: 80
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: identity-api
                port:
                  number: 80
          - path: /reports
            pathType: Prefix
            backend:
              service:
                name: reports-api
                port:
                  number: 80
          - path: /sockets
            pathType: Prefix
            backend:
              service:
                name: sockets-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
spec:
  tls:
    - hosts:
        - snowcapture.com
      secretName: mkcert
  rules:
    - host: snowcapture.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ui
                port:
                  number: 80
